<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<artifactId>spring-boot-language-server</artifactId>
	<packaging>jar</packaging>

	<parent>
		<groupId>org.springframework.ide.vscode</groupId>
		<artifactId>commons-parent</artifactId>
		<version>1.4.0-SNAPSHOT</version>
		<relativePath>../commons/pom.xml</relativePath>
	</parent>

	<properties>
		<dependencies.version>${project.version}</dependencies.version>
	</properties>

	<repositories>
		<repository>
			<id>${project.name}-repo</id>
			<url>file://${project.basedir}/repo</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- spring boot -->
		<dependency>
			<groupId>org.springframework.ide.vscode</groupId>
			<artifactId>language-server-starter</artifactId>
			<version>${dependencies.version}</version>
		</dependency>
		<!-- other -->
		<dependency>
			<!-- Local modified JSON lib packaged to support order in maps -->
			<groupId>org.springframework.ide.eclipse</groupId>
			<artifactId>org.json</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.ide.vscode</groupId>
			<artifactId>java-properties</artifactId>
			<version>${dependencies.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.ide.vscode</groupId>
			<artifactId>commons-maven</artifactId>
			<version>${dependencies.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.ide.vscode</groupId>
			<artifactId>commons-gradle</artifactId>
			<version>${dependencies.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.ide.vscode</groupId>
			<artifactId>commons-language-server</artifactId>
			<version>${dependencies.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.ide.vscode</groupId>
			<artifactId>commons-yaml</artifactId>
			<version>${dependencies.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.ide.vscode</groupId>
			<artifactId>commons-boot-app-cli</artifactId>
			<version>${dependencies.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jdt</groupId>
			<artifactId>org.eclipse.jdt.core</artifactId>
			<version>3.16.0</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>${commons-io-version}</version>
		</dependency>
<!--		<dependency>
			<groupId>com.fasterxml</groupId>
			<artifactId>aalto-xml</artifactId>
			<version>1.1.1</version>
		</dependency> -->
		
		<!-- Test harness -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.ide.vscode</groupId>
			<artifactId>language-server-test-harness</artifactId>
			<version>${dependencies.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito-version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<!-- Set source 1.8 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<!-- Configure fat jar -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>2.0.0.RELEASE</version>
				<configuration>
					<layout>ZIP</layout>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Ignore test classes from test projects -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<trimStackTrace>false</trimStackTrace>
					<excludes>
						<exclude>test-projects/**</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
